# upl

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  ast_test  fibonacci.upl  test_0.upl  test_1.upl
examples/: euler_1.upl  euler_2.upl  euler_3.upl  factorial.upl  fibonacci.upl  fizzbuzz.upl
src/: CMakeLists.txt  ast.c  ast.h  ast_test.c  builtins.c  builtins.h  eval.c  eval.h  parser.c  parser.h  stack.c  stack.h  tokenizer.c  tokenizer.h  tokenizer_first.sh  tokenizer_test.c  upl.c  value.c  value.h
tests/: CMakeLists.txt
